...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" adjustsImageWhenHighlighted="NO" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6io-9A-Yq4" userLabel="&lt;">
                                <rect key="frame" x="20" y="72" width="32" height="32"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="32" id="UZ6-fr-E0p"/>
                                    <constraint firstAttribute="width" constant="32" id="rHb-QX-S9C"/>
                                </constraints>
                                <state key="normal" image="IconLeftActive">
                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <state key="disabled" image="IconLeftInactive"/>
                                <connections>
                                    <action selector="switchToPreviousMonth:" destination="nY1-e6-BNo" eventType="touchUpInside" id="1dt-YW-E0Y"/>
                                </connections>
...
                            <constraint firstItem="fCc-q0-hN5" firstAttribute="leading" secondItem="Z7m-Ss-lQN" secondAttribute="leading" id="BlB-CK-dNF"/>
                            <constraint firstItem="fCc-q0-hN5" firstAttribute="top" secondItem="Z7m-Ss-lQN" secondAttribute="top" id="UEb-rJ-Whe"/>
                            <constraint firstAttribute="trailing" secondItem="fCc-q0-hN5" secondAttribute="trailing" id="Ycr-07-tiE"/>
                            <constraint firstItem="fCc-q0-hN5" firstAttribute="bottom" secondItem="b2x-Z5-637" secondAttribute="top" id="egx-nr-lly"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Notifications" id="usu-OE-mrJ"/>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                    <connections>
                        <outlet property="tableView" destination="fCc-q0-hN5" id="pKX-J6-bho"/>
                        <segue destination="6oZ-Db-dYh" kind="show" identifier="Choose Sound" id="FKO-9e-Sup"/>
                    </connections>
                </viewController>
...
            <point key="canvasLocation" x="2662" y="2361"/>
        </scene>
        <!--Settings Navigation Controller-->
        <scene sceneID="Ui8-rF-iey">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="j8p-Wz-faw" userLabel="Settings Navigation Controller" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Settings" image="TabbarSettingsInactive" id="NmH-l2-53C">
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="image" keyPath="selectedImage" value="TabbarSettingsActive"/>
                        </userDefinedRuntimeAttributes>
                    </tabBarItem>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="Ngf-jA-gny">
...
                            <constraint firstItem="FSI-hh-OFx" firstAttribute="leading" secondItem="f3O-E5-WpW" secondAttribute="leading" id="5Vv-re-fxs"/>
                            <constraint firstItem="FSI-hh-OFx" firstAttribute="bottom" secondItem="FiT-nL-qD7" secondAttribute="top" id="cOS-H2-02I"/>
                            <constraint firstItem="FSI-hh-OFx" firstAttribute="top" secondItem="f3O-E5-WpW" secondAttribute="top" id="iop-IE-Nrn"/>
                            <constraint firstAttribute="trailing" secondItem="FSI-hh-OFx" secondAttribute="trailing" id="tC2-iI-O7E"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Daily Water Intake" id="Tue-QT-MbV">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="w3B-ay-B3d">
                            <connections>
                                <action selector="cancelButtonWasTapped:" destination="B00-4Z-J9C" id="oEa-3P-31T"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="CEl-Po-44f">
                            <connections>
...
            <point key="canvasLocation" x="1050" y="-1571.8309859154929"/>
        </scene>
        <!--Statistics Navigation Controller-->
        <scene sceneID="prQ-iP-Pcm">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TkU-Ak-jIk" userLabel="Statistics Navigation Controller" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Statistics" image="TabbarStatisticInactive" id="rSh-yD-2IJ">
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="image" keyPath="selectedImage" value="TabbarStatisticActive"/>
                        </userDefinedRuntimeAttributes>
                    </tabBarItem>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="VIk-fx-tc8">
...
