...
  case energy
  case beer
  case wine
  case hardLiquor
  
  fileprivate struct LocalizedStrings {
    static let waterTitle      = NSLocalizedString("D:Water",    value: "Water",    comment: "Drink: Title for water")
    static let coffeeTitle     = NSLocalizedString("D:Coffee",   value: "Coffee",   comment: "Drink: Title for coffee")
    static let teaTitle        = NSLocalizedString("D:Tea",      value: "Tea",      comment: "Drink: Title for tea")
    static let sodaTitle       = NSLocalizedString("D:Soda",     value: "Soda",     comment: "Drink: Title for soda")
    static let juiceTitle      = NSLocalizedString("D:Juice",    value: "Juice",    comment: "Drink: Title for juice")
    static let milkTitle       = NSLocalizedString("D:Milk",     value: "Milk",     comment: "Drink: Title for milk")
    static let sportTitle      = NSLocalizedString("D:Sport",    value: "Sport",    comment: "Drink: Title for sport drink")
...
